crates/biome_cli/tests/snapshots/main_cases_handle_css_files/should_not_format_files_by_default.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: content
---
## `input.css`

```css
html {}
```

# Termination Message

```block
internalError/io ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × No files were processed in the specified paths.
  


```

# Emitted Messages

```block
Checked 0 files in <TIME>. No fixes were applied.
```
